# csspin

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  README.md  README.rst  bts-notes.md  conf.py  devrun.bat  devrun.sh  pyproject.toml  requirements-cp38-manylinux_2_28_x86_64.txt  requirements-cp38-win_amd64.txt  requirements-linux.txt  requirements.txt  setup.cfg  sonar-project.properties  spin-reqs-cp38-manylinux_2_28_x86_64.txt  spin-reqs-cp38-manylinux_2_28_x86_64.txt.in  spin-reqs-cp38-win_amd64.txt  spin-reqs-cp38-win_amd64.txt.in  spin-reqs-linux.txt  spin-reqs-linux.txt.in  spin-reqs.txt  spinfile.yaml
.gitlab/merge_request_templates/: default.md
doc/: apiref.rst  click.inv  cliref.rst  conf.py  howtoplugins.rst  index.rst  installation.rst  links.rst  modules.rst  overview.rst  relnotes.rst  spin.builtin.rst  spin.rst  userman.rst
docker/: spin-base.dockerfile  spin-dev.dockerfile
docs/: .gitignore  apiref.rst  cliref.rst  conf.py  howtoplugins.rst  index.rst  installation.rst  links.rst  overview.rst  plugins.rst  provision.rst  relnotes.rst  schemaref.rst  spin.rst  todo.rst  userman.rst
docs/_static/: custom.css
plugins/: demo_plugin.py  demo_plugin_schema.yaml  flake8.py  python.py  virtualenv.py
plugins/cedm/: cedm.py  setup.cfg
plugins/demo-plugin/: setup.cfg
src/csspin/: __init__.py  cli.py  schema.yaml  tree.py
src/csspin/builtin/: __init__.py
src/spin/: __init__.py  __main__.py  api.py  cli.py  cruise.py  defaults.py  get_abi_tag.py  plugin.py  schema.py  schema.yaml  tree.py  util.py
src/spin/builtin/: __init__.py  build.py  buildout.py  cache.py  ce15.py  cept.py  cppcheck.py  cpplint.py  devpi.py  docker.py  eggs.py  essentials.py  explicit.py  flake8.py  git.py  gitlab.py  global.py  gtest.py  java.py  lint.py  maven.py  mvn.py  node.py  nosetest.py  notes.md  piptools.py  portwheel.py  pre_commit.py  preflight.py  pytest.py  python.py  radon.py  scons.py  shell.py  sphinx.py  stdworkflows.py  test.py  vcs.py  virtualenv.py
tdocs/: Makefile  architecture.md  documentation_plans.md  misc_decisions.md  notes.md  plugin_distribution.md  plugin_guideline.md  publishing_on_pypi.md  solving_explicit_environment_use.md
tests/: conftest.py  none.yaml  test_api.py  test_cli.py  test_cruise.py  test_flake8.py  test_get_abi_tag.py  test_schema.py  test_toposort.py  test_tree.py  test_yaml.py  test_yaml.yaml
tests/data/cs.something/: setup.py  spinfile.yaml
tests/data/csspin_depend/: README.md  pyproject.toml
tests/data/csspin_depend/src/csspin_depend/: depend.py
tests/data/csspin_dummy/: README.md  pyproject.toml
tests/data/csspin_dummy/src/csspin_dummy/: dummy.py  dummy2.py  dummy_schema.yaml
tests/data/spin_depend/: README.md  pyproject.toml
tests/data/spin_depend/src/spin_depend/: depend.py  depend_schema.yaml
tests/data/spin_dummy/: README.md  pyproject.toml
tests/data/spin_dummy/spin_dummy/: dummy.py
tests/data/spin_dummy/src/spin_dummy/: dummy.py  dummy2.py
tests/data/trivial/: setup.py  spinfile.yaml
tests/integration/: build.yaml  buildout.yaml  cppcheck.yaml  cpplint.yaml  flake.yaml  python.yaml  test_pp.py  test_provisioning.py
tests/integration/directives/: test_directives.py
tests/integration/directives/fixtures/: spinfile.yaml
tests/integration/directives/fixtures/plugins/: directives.py
tests/integration/testpkg/: python.yaml
tests/integration/yamls/: build.yaml  complex_plugin_dependencies.yaml  cppcheck.yaml  cpplint.yaml  flake.yaml  java.yaml  node.yaml  system_provision.yaml
tests/schema/: test_schema.yaml  test_schema_custom.py  test_schema_environment.yaml  test_schema_extended.py  test_schema_general.yaml  test_schema_internal_override.yaml  test_schema_secrets.yaml
tests/schema/testplugin/: testplugin.py  testplugin_schema.yaml
tests/yamls/: csspin_dummy_config.yaml  none.yaml  spin_dummy_config.yaml  test_yaml.yaml
tests/yamls/.config/: global.yaml
