[metadata]
name = spin
version = 0.1.5
description = spin
long_description = file: README.rst
license = Copyright (C) 2020 Contact Software
author = Frank Patz-Brockmann
author_email = fp@contact.de
maintainer = Frank Patz-Brockmann
maintainer_email = fp@contact.de
url = https://git.contact.de/frank/<notyet>

[options]
package_dir =
    =src
packages = find:
install_requires =
    Click
    colorama
    entrypoints
    ruamel.yaml
    wheel

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    spin = spin:main
spin.plugin  =
    global = spin.builtin.global
    essentials = spin.builtin.essentials
    explicit = spin.builtin.explicit

[bdist_wheel]
universal = 1

[flake8]
copyright-check=True

