[metadata]
name = spin
version = 0.2.0
description = spin
long_description = file: README.rst
license = Copyright (C) 2021 Contact Software
author = Frank Patz-Brockmann
author_email = fp@contact.de
maintainer = Frank Patz-Brockmann
maintainer_email = fp@contact.de
url = https://git.contact.de/frank/spin

[options]
package_dir =
    =src
packages = find:
install_requires =
    Click
    colorama
    distro
    entrypoints
    packaging
    ruamel.yaml
    wheel
    packaging
    path
    GitPython
    svn
    install-jdk

[options.packages.find]
where=src


[options.package_data]
spin=
	*.yaml

[options.entry_points]
console_scripts =
    spin = spin:_main
spin.plugin  =
    global = spin.builtin.global
    essentials = spin.builtin.essentials
    explicit = spin.builtin.explicit

[flake8]
copyright-check=True
max-line-length=88
ignore=F821,W503
#ignore=E252
