[metadata]
name = cedm
version = 0.1
description = cedm
long_description = file: README.rst
license = Copyright (C) 2020 Contact Software
author = Frank Patz-Brockmann
author_email = fp@contact.de
maintainer = Frank Patz-Brockmann
maintainer_email = fp@contact.de
url = https://git.contact.de/frank/<notyet>

[options]
py_modules = cedm

[options.entry_points]
spin.plugin =
    cedm = cedm

[bdist_wheel]
universal = 1
